# mermaid-rs

./: .gitignore  Cargo.toml  README.md
examples/: flowchart.rs  pie.rs  simple.rs
src/: lang.lalrpop  lib.rs  main.rs  parser_utils.rs  style.rs
src/diagrams/: mod.rs
src/diagrams/flowchart/: grammar.lalrpop  lexer.rs  mod.rs  parse.rs
src/diagrams/pie/: mod.rs  parse.rs  render.rs
src/diagrams/simple/: mod.rs
src/draw/: gradient.rs  mod.rs
src/draw/svg/: mod.rs  text.rs
