[package]
name = "mermaid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
kurbo = "0.8.3"
nom = "7.1.1"
petgraph = "0.6.2"
piet = "0.5.0"
piet-svg = "0.5.0"
thiserror = "1.0.37"
tinyvec = { version = "1.6.0", features = ["std"] }
