[package]
name = "mermaid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
dyn-clone = "1.0.9"
kurbo = "0.8.3"
nom = "7.1.1"
nom_locate = "4.0.0"
once_cell = "1.16.0"
petgraph = "0.6.2"
#piet = { git = "https://github.com/linebender/piet" }
piet = { path = "../../contrib/piet/piet" }
#piet-common = { git = "https://github.com/linebender/piet", features = ["png", "image"] }
piet-common = { path = "../../contrib/piet/piet-common", features = ["png", "image"] }
#piet-svg = { git = "https://github.com/linebender/piet" }
piet-svg = { path = "../../contrib/piet/piet-svg" }
thiserror = "1.0.37"
tinyvec = { version = "1.6.0", features = ["std"] }
